--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-tools/schema": "^8.3.1",
     "@prisma/client": "^3.6.0",
     "apollo-server": "^2.25.2",
+    "bcrpyt": "^2.0.0",
     "D": "^1.0.0",
     "dotenv": "^10.0.0",
     "graphql-tools": "^8.2.0"
